# ai-schools-workshop-crimson_jaguars

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  main.py  scoring.py  services.py  states.py
backend/school_district_evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_main.py  test_scoring.py  test_services.py  test_states.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/src/: App.tsx.html  index.html  main.tsx.html
frontend/coverage/src/components/: AudienceToggle.tsx.html  DistrictCard.tsx.html  MetricRow.tsx.html  PresetSelect.tsx.html  StateSelect.tsx.html  index.html
frontend/coverage/src/data/: index.html  mockDistricts.ts.html
frontend/coverage/src/lib/: index.html  presets.ts.html
frontend/coverage/src/pages/: index.html  (+3 more)
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  styles.css  types.ts
frontend/src/components/: AudienceToggle.test.tsx  AudienceToggle.tsx  DistrictCard.test.tsx  DistrictCard.tsx  MetricRow.tsx  PresetSelect.test.tsx  PresetSelect.tsx  StateSelect.test.tsx  StateSelect.tsx
frontend/src/data/: mockDistricts.test.ts  mockDistricts.ts
frontend/src/lib/: presets.test.ts  presets.ts  types.ts
frontend/src/pages/: ComparePage.test.tsx  ComparePage.tsx  HomePage.test.tsx  HomePage.tsx  ResultsPage.test.tsx  ResultsPage.tsx
src/: App.tsx  index.css
src/lib/: types.ts
